--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,16 +1,33 @@
 // =====================================================================================================================
 .header {
-  width: 100%;
+  position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+  
+    -webkit-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+    box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+      background-color: #11ffee00;
 
-  &.sticky {
-    // ..стили для липкого хедера
-  }
-
-  // .header__container
   &__container {
-    height: rem($headerHeight);
-    display: flex;
+  justify-content: start;
     align-items: center;
+    display: flex;
+  
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+.menu {
+  &__list {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 40px;
   }
 }
 // =====================================================================================================================
