--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -13,12 +13,12 @@ $footerHeight: 100;
 $mainRadius: rem(10);
 
 $whiteColor: #fff;
-$blackColor: #131313;
-$grayColor: #6f6f6f;
-$redColor: #ff4040;
+$blackColor: #000;
+$textColor: #303030;;
+$accentColor:#0019ff;
+$chapterColor: #070707;
+$greyColor: #717171;
 
-$firstAccentColor: $blackColor;
-$secondAccentColor: $redColor;
 
 $fontFamily: $mainFont, sans-serif; // Семейство шрифта по умолчанию
 $fontColor: $blackColor; // Цвет шрифта по умолчанию
