--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -29,7 +29,13 @@
         justify-content: space-between;
         gap: 40px;
   }
+
+  &__link {
+
+  }
 }
+
+
 // =====================================================================================================================
 
 // Burger
