--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -1,1 +1,33 @@
-// Заголовки, общие БЄМ блоки и проче...
+// Display
+.d-flex {
+    display: flex;
+}
+
+.d-block {
+    display: block;
+}
+
+.d-none {
+    display: none;
+}
+
+// margins
+
+.margin-14-right {
+    margin-right: 14px;
+}
+
+.margin-16-right {
+    margin-right: 14px;
+}
+
+.margin-18-right {
+    margin-right: 14px;
+}
+
+.btn {
+    
+}
+
+//pading
+
