--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -15,10 +15,11 @@ $mainRadius: rem(10);
 $whiteColor: #fff;
 $blackColor: #000;
 $textColor: #303030;;
-$accentColor:#0019ff;
+$accentColor:#1d356d;;
 $chapterColor: #070707;
 $greyColor: #717171;
-
+$hoverColor: #0019ff;
+$secondColor: #FFC24D;
 
 $fontFamily: $mainFont, sans-serif; // Семейство шрифта по умолчанию
 $fontColor: $blackColor; // Цвет шрифта по умолчанию
