--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -92,3 +92,28 @@ body {
     padding-top: rem($headerHeight);
   }
 }
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
+
+.section {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
