--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@
 /** Подключение стилей отдельных блоков и секций */
 @import 'components/header';
 @import 'components/footer';
+@import 'components/sidebar';
 
 @import 'pages/mainSection';	
 @import 'pages/servicesSection';
