--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -49,7 +49,7 @@
       margin-bottom: 20px;
         &:hover,
         &:focus {
-            color: $accentColor;
+            color: $greyColor;
             
           }
   }
