--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -7,11 +7,9 @@
     left: 0;
     width: 100%;
     z-index: 100;
-    background-color: #1d356d;
+    background-color: $blackColor;
   
-    -webkit-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
-    -moz-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
-    box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+
 
   &__container {
   justify-content: start;
@@ -38,64 +36,10 @@
   &__link {
     color: $whiteColor;
     font-weight: 700;
+        &:hover,
+        &:focus {
+          color: $greyColor;
+      
+        }
   }
 }
-
-
-// =====================================================================================================================
-
-// Burger
-/*
-.icon-menu {
-  display: none;
-
-  @include media(767) {
-    display: block;
-    position: relative;
-    width: rem(30);
-    height: rem(18);
-    cursor: pointer;
-    z-index: 5;
-
-    span,
-    &::before,
-    &::after {
-      content: "";
-      transition: all 300ms ease 0ms;
-      right: 0;
-      position: absolute;
-      width: 100%;
-      height: rem(2);
-      background-color: #000;
-    }
-
-    &::before {
-      top: 0;
-    }
-
-    &::after {
-      bottom: 0;
-    }
-
-    span {
-      top: calc(50% - rem(1));
-    }
-
-    .menu-open & {
-      span {
-        width: 0;
-      }
-
-      &::before {
-        top: calc(50% - rem(1));
-        transform: rotate(-45deg);
-      }
-
-      &::after {
-        bottom: calc(50% - rem(1));
-        transform: rotate(45deg);
-      }
-    }
-  }
-}
-*/
