--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -26,8 +26,49 @@
 }
 
 .btn {
-    
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+    display: block;
+    width: 200px;
+    height: 40px;
+    font-size: 18px;
+    text-decoration: none;
+    color: $whiteColor;
+    border: 2px solid $whiteColor;
+    letter-spacing: 2px;
+    text-align: center;
+    position: relative;
+    transition: all .35s;
 }
+
+.btn_text {
+    position: relative;
+    z-index: 2;
+    color: $whiteColor;
+}
+
+.btn2:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: $accentColor;
+    transition: all .35s;
+    color: $whiteColor;
+}
+
+.btn:hover .btn_text {
+    color: $accentColor;
+}
+
+.btn:hover:after {
+    width: 100%;
+}
+
+
 
 //pading
 
