--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -15,11 +15,13 @@ $mainRadius: rem(10);
 $whiteColor: #fff;
 $blackColor: #000;
 $textColor: #303030;;
-$accentColor:#1d356d;;
+$accentColor:#24ffff;
 $chapterColor: #070707;
 $greyColor: #717171;
 $hoverColor: #0019ff;
 $secondColor: #FFC24D;
+$sectionBackground: #0a0912;
+$sectionBackgroundsec: #111210;
 
 $fontFamily: $mainFont, sans-serif; // Семейство шрифта по умолчанию
 $fontColor: $blackColor; // Цвет шрифта по умолчанию
