--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,3 +39,4 @@
 @import 'pages/servicesSection';
 @import 'pages/aboutUs.scss';
 @import 'pages/whyChooseUs.scss';
+@import 'pages/sendRequest.scss';
