--- a/src/scss/components/sidebar.scss
+++ b/src/scss/components/sidebar.scss
@@ -8,30 +8,42 @@
     background-color: $blackColor;
     overflow-x: hidden;
     padding-top: 20px;
-        gap: 40px;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    &__icons {
+        fill: $whiteColor;
+        text-align: center;
+
+            &:hover,
+            &:focus {
+                fill: $accentColor; 
+            }
+    }
+
+    &__list{
+        padding: 0;
+    }
 }
 
-.sidenav a {
-    padding: 6px 8px 6px 16px;
+.sidenav__item {
+    margin-top: 20px;
+    bottom: 0;
     text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    writing-mode: vertical-lr;
-    transform: rotate(180deg);
-
+    font-size: 35px;
+    text-align: center;
 }
 
-.sidenav a:hover {
-    color: #f1f1f1;
-}
+
 
 main {
-    margin-left: 160px;
+    margin-left: 90px;
     /* Same as the width of the sidenav */
     font-size: 28px;
     /* Increased text to enable scrolling */
-    padding: 0px 10px;
+    padding: 0px 0px;
 }
 
 @media screen and (max-height: 450px) {
@@ -47,22 +59,15 @@ main {
 
 .sidenav {
 
-    
 
     &__list {
         width: 100%;
-        margin-top: 150px;
+        margin-bottom: 70px;
     }
 
     &__link {
         color: $whiteColor;
         font-weight: 700;
         margin-top: 40px;
-
-        &:hover,
-        &:focus {
-            color: $greyColor;
-
-        }
     }
 }
