--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,7 +1,20 @@
+.footer{
+  background-color: $blackColor;
+  padding: 30px 0;
+
+  &__text{
+    color: $whiteColor;
+    margin: 20px 0;
+  }
+
+  &__line {
+    border-bottom: 3px solid $accentColor;
+    width: 80px;
+  }
+}
 .footer__container {
-  display: flex;
-  justify-content: center;
-  background-color: $whiteColor;
+
+  
 
   
   // @media (min-width: 992px) {
@@ -16,7 +29,8 @@
 }
 
 .list {
-
+  margin: 0;
+  padding: 0;
 }
 
 .services {
@@ -26,7 +40,7 @@
 
     @media screen and (min-width: 1200px) {
       &:nth-child(n) {
-          padding-left: 150px;
+          padding-left: 100px;
         }
     }
 
@@ -41,8 +55,12 @@
     margin-bottom: 15px;
   }
 
+  &__item {
+    margin-top: 10px;
+  }
+
   &__link {
-      color: $greyColor;
+      color: $whiteColor;
       font-size: 16px;
       line-height: 1.88;
       margin-top: 10px;
@@ -55,3 +73,80 @@
   }
 
 }
+// .footer {
+//   background-color: $blackColor;
+//   color: $whiteColor;
+//   padding: 50px 0;
+//   font-family: Arial, sans-serif;
+
+//   &__container {
+//     max-width: 1200px;
+//     margin: 0 auto;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center; // Чтобы элементы были по вертикали по центру
+//   }
+
+//   &__tablet {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: flex-start;
+//     width: 100%;
+
+//     .company-address {
+//       .footer__link {
+//         display: block;
+
+//         img {
+//           margin-bottom: 15px;
+//           height: 70px; // Указываем высоту прямо здесь, чтобы не повторять в HTML
+//         }
+//       }
+
+//       .footer__text {
+//         font-size: 16px;
+//         margin-bottom: 15px;
+//         opacity: 0.8; // Добавляем небольшую прозрачность для менее выделенного текста
+//       }
+
+//       .footer__line {
+//         width: 50px;
+//         height: 2px;
+//         background-color: $whiteColor;
+//       }
+//     }
+
+//     .services {
+//       flex-grow: 1;
+//       padding-left: 30px;
+//       max-width: 300px;
+
+//       &__title {
+//         font-size: 20px;
+//         font-weight: bold;
+//         margin-bottom: 20px;
+//       }
+
+//       &__list {
+//         list-style: none;
+//         padding: 0;
+
+//         &__item {
+//           margin-bottom: 15px;
+
+//           .services__link,
+//           .address__link {
+//             color: $whiteColor;
+//             text-decoration: none;
+//             transition: 0.3s ease; // Плавное изменение при наведении
+
+//             &:hover {
+//               text-decoration: underline;
+//               opacity: 0.9; // Небольшое изменение прозрачности при наведении
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
