--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -15,10 +15,10 @@ $mainRadius: rem(10);
 $whiteColor: #fff;
 $blackColor: #000;
 $textColor: #303030;;
-$accentColor:#24ffff;
+$accentColor:#68f8ed;
 $chapterColor: #070707;
 $greyColor: #717171;
-$hoverColor: #0019ff;
+
 $secondColor: #FFC24D;
 $sectionBackground: #0a0912;
 $sectionBackgroundsec: #111210;
