--- a/src/scss/pages/sendRequest.scss
+++ b/src/scss/pages/sendRequest.scss
@@ -1,6 +1,6 @@
 .information{
     position: relative;
-    background: url('../../images/background_black.jpg');
+    background: $blackColor;
     background-size: cover;
     background-position: center;
     
@@ -53,4 +53,87 @@
         margin-bottom: 20px;
         color: $whiteColor;
     }
+}
+
+// form
+
+    // .input-group {
+    //     position: relative;
+    // }
+
+    // .input-group__input {
+    //     font: inherit;
+    //     color: #fff;
+    //     padding: 10px;
+    //     border: none;
+    //     border-radius: 4px;
+    //     outline: 2px solid #fff;
+    //     background-color: transparent;
+    //     transition: outline-color 500ms;
+    // }
+
+    // .input-group__input:focus,
+    // .input-group__input:valid {
+    //     outline-color: #3c50eb;
+    // }
+
+    // .input-group__label {
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     transform: translate(10px, 10px);
+    //     color: #fff;
+    //     transition: transform 500ms, scale 500ms;
+    // }
+
+    // .input-group__input:focus+.input-group__label,
+    // .input-group__input:valid+.input-group__label {
+    //     padding-inline: 5px;
+    //     transform: translate(10px, -20px) scale(0.8);
+    //     background-color: #000;
+    // }
+
+.input-group {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.input-field {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.input-group__input {
+    font: inherit;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    outline: 2px solid #fff;
+    background-color: transparent;
+    transition: outline-color 500ms;
+    max-width: 300px;
+    width: 100%;
+}
+
+.input-group__input:focus,
+.input-group__input:valid {
+    outline-color: #3c50eb;
+}
+
+.input-group__label {
+    position: absolute;
+    top: 0;
+    left: 10px;
+    transform: translateY(20px);
+    color: #fff;
+    transition: transform 500ms, padding-inline 500ms;
+}
+
+.input-group__input:focus+.input-group__label,
+.input-group__input:valid+.input-group__label {
+    transform: translateY(-14px) scale(0.8);
+    background-color: #000;
+    padding-inline: 5px;
 }
