--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -20,7 +20,9 @@ $textColor: #303030;
 // $accentColor: #00e098;
 $accentColor: #86C232;
 $secondColor: #61892F;
-$darkGrey: #222629;
+$darkGrey: #17191a;
+// $darkGrey: #222629;
+
 $greyColor: #474B4F;
 $lightGrey: #6B6E70;
 
