--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -54,4 +54,8 @@
 @import 'mainSections/sendRequest.scss';
 
 
+@import 'pages/landingPage.scss';
+@import 'pages/portfolioPage.scss';
+
+
 @import 'components/footer';
