--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -3,7 +3,10 @@
   left: 0;
   width: 100%;
   z-index: 100;
-  background-color: $blackColor;
+
+
+  background-color: #f8f8f8;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 30px inset;
 }
 
 
@@ -28,6 +31,11 @@
   }
 }
 
+.logo .menu__icon {
+  fill: $accentColor;
+  margin-left: -65px;
+}
+
 .menu {
   margin-left: auto;
   margin-right: 30px;
@@ -41,7 +49,7 @@
   }
 
   &__link {
-    color: $whiteColor;
+    color: $darkGrey;
     font-weight: 700;
     font-size: 22px;
     line-height: 1.36;
