--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -33,6 +33,14 @@
     margin-top: 100px;
 }
 
+.padding-10 {
+    padding: 10px;
+}
+
+.padding-20 {
+    padding: 20px;
+}
+
 // .btn {
 //     margin-left: auto;
 //     margin-right: auto;
@@ -82,8 +90,7 @@
 
 // Button Order service 
 .btn {
-    margin-left: auto;
-    margin-right: auto;
+
     margin-top: 25px;
     display: block;
     width: 200px;
@@ -136,7 +143,6 @@
     color: $whiteColor;
     text-align: center;
     font-size: 22px;
-    padding: 20px;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
