--- a/src/scss/mainSections/mainSection.scss
+++ b/src/scss/mainSections/mainSection.scss
@@ -12,12 +12,14 @@
         max-width: 1200px;
         width: 60%;
         text-align: left;
+        padding: 0;
+
+
     }
 
     &__secContainer {
         width: 40%;
         text-align: left;
-        margin-top: 50px;
     }
 
     &__secText {
@@ -37,7 +39,7 @@
 
         margin-top: 50px;
         margin-bottom: 30px;
-        margin-left: 100px;
+
         text-align: left;
 
         margin-right: auto;
@@ -56,7 +58,7 @@
         letter-spacing: 0.06em;
         font-weight: 500;
 
-        margin-left: 100px;
+
         text-align: left;
 
     }
@@ -69,7 +71,6 @@
         text-align: center;
         border: 2px solid $accentColor;
 
-        margin-left: 200px;
 
         &__text {
             color: $whiteColor;
@@ -87,7 +88,6 @@
     }
 
     .container_btn {
-        margin-left: -100px;
         margin-top: 100px;
     }
 
