--- a/src/scss/mainSections/sendRequest.scss
+++ b/src/scss/mainSections/sendRequest.scss
@@ -1,5 +1,5 @@
 .contact-us {
-    padding: 100px 0 140px 0;
+    padding: 50px 0 50px 0;
 
     @media only screen and (max-width: 992px) {
         padding: 150px 0 140px 0;
@@ -98,12 +98,11 @@
 }
 
 .contact-gif {
-    width: 100%;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .gif {
-    width: 50%;
+    width: 80%;
     height: auto;
 }
 
