--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,10 +52,12 @@
 @import 'mainSections/aboutUs.scss';
 @import 'mainSections/whyChooseUs.scss';
 @import 'mainSections/sendRequest.scss';
+@import 'mainSections/workflow.scss';
 
 
 @import 'pages/landingPage.scss';
 @import 'pages/portfolioPage.scss';
+@import 'pages/servicePage.scss';
 
 
 @import 'components/footer';
