--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -177,3 +177,92 @@
     opacity: 1;
     right: 0;
 }
+
+//landingpage-section__btn
+
+.landingpage-section__btn {
+    font-size: 22px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: $greyColor;
+
+
+    border-radius: 4px;
+    padding: 6px 22px;
+    border: solid transparent;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: $accentColor;
+
+        cursor: pointer;
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
+}
+
+.landing-Page-section-active-btn {
+    font-size: 22px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    text-align: center;
+    color: $accentColor;
+
+    cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    padding: 6px 22px;
+    border: solid transparent;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: $accentColor;
+    }
+}
+
+
+
+.wrapper {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s ease-in-out;
+}
+
+/* Показать контент после загрузки */
+.loaded .wrapper {
+    opacity: 1;
+    visibility: visible;
+}
+
+
+// title--------------------------------------------------------------------------------->
+.main {
+
+    &__title {
+        margin: 20px 0 20px;
+        padding: 0 0 15px;
+        color: $darkGrey;
+        font-size: 28px;
+        line-height: 24px;
+        position: relative;
+        vertical-align: top;
+        box-shadow: 0 -1px 0 #d0d0d0 inset;
+        font-weight: 600;
+        text-align: center;
+    }
+}
+
+.main__title:after {
+    left: 0;
+    right: 0;
+    content: '';
+    bottom: -4px;
+    width: 10px;
+    height: 10px;
+    margin: 0 auto;
+    position: absolute;
+    border: 1px solid #fff;
+    background-color: $accentColor;
+}
